--- a/rootfs/usr/lib/systemd/system/fwtree.service
+++ b/rootfs/usr/lib/systemd/system/fwtree.service
@@ -13,7 +13,7 @@ WantedBy=multi-user.target
 Type=oneshot
 RemainAfterExit=yes
 
-ExecStartPre=/usr/bin/sh -c 'ipset-helper -c'
+ExecStartPre=/usr/bin/sh -c 'ipset-helper -c && ipset-helper'
 ExecStart=/usr/bin/sh -c 'fwtree | iptables-restore'
 
 ExecStop=/usr/bin/sh -c 'iptables-restore < /usr/share/fwtree/fwtree-stop.ruleset'
