removed repo conflict with firewalld, added iptablesd-convert script and made it run on install/update if /etc/iptables.d exists

--- a/rootfs/usr/lib/systemd/system/fwtree.service
+++ b/rootfs/usr/lib/systemd/system/fwtree.service
@@ -4,6 +4,8 @@ Description=Tree-driven firewall
 Before=network.target
 Before=libvirtd.service
 
+After=firewalld.service
+
 Conflicts=iptables.service ip6tables.service ebtables.service firewalld.service
 
 [Install]
