--- a/rootfs/usr/lib/systemd/system/fwtree.service
+++ b/rootfs/usr/lib/systemd/system/fwtree.service
@@ -18,6 +18,6 @@ RemainAfterExit=yes
 ExecStartPre=/usr/bin/sh -c 'ipset-helper -c'
 ExecStart=/usr/bin/sh -c 'fwtree | iptables-restore'
 
-ExecReload=/usr/bin/sh -c 'fwtree | iptables-restore'
+ExecReload=/usr/bin/sh -c 'ipset-helper -c ; fwtree | iptables-restore'
 
 ExecStop=/usr/bin/sh -c 'iptables-restore < /usr/share/fwtree/fwtree-stop.ruleset'
